# Pattern_Matching_Task_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp
cmake/: Dependencies.cmake
kernels/: fast_kernel.cl  naive_kernel.cl
pattern_matching/: CMakeLists.txt
pattern_matching/inc/: config.hpp  pattern_matching.hpp  utils.hpp
pattern_matching/src/: main.cpp  matching.cpp
tests/: CMakeLists.txt
tests/End_To_End/: testgen.py  testrun.py
tests/End_To_End/input_files/: test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
tests/Unit/: test.cpp
